updated data files

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio-site",
-  "homepage": "https://tomsclassroom.com/port/",
+  "homepage": "https://thomaspchant.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
